--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alura Books</title>
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/Alura-Books/styles/reset.css" />
+    <link rel="stylesheet" href="/Alura-Books/styles/style.css" />
+    <link rel="stylesheet" href="/Alura-Books/styles/header.css" />
   </head>
   <body>
-    <h1>Alura Books</h1>
+    <header class="cabecalho">
+      <div class="container">
+        <span class="cabecalho__menu-hamburguer"> </span>
+        <img src="/Alura-Books/img/Logo.svg" alt="Logo" />
+      </div>
+
+      <div class="container">
+        <a href="#"
+          ><img src="/Alura-Books/img/Favoritos.svg" alt="Favoritos"
+        /></a>
+        <a href="#"><img src="/Alura-Books/img/Compras.svg" alt="Compras" /></a>
+      </div>
+    </header>
   </body>
 </html>
