--- a/index.html
+++ b/index.html
@@ -12,15 +12,33 @@
   <body>
     <header class="cabecalho">
       <div class="container">
-        <span class="cabecalho__menu-hamburguer"> </span>
-        <img src="/Alura-Books/img/Logo.svg" alt="Logo" />
+        <span class="cabecalho__menu-hamburguer container__imagem"> </span>
+        <img
+          src="/Alura-Books/img/Logo.svg"
+          alt="Logo"
+          class="container__imagem"
+        />
       </div>
 
       <div class="container">
         <a href="#"
-          ><img src="/Alura-Books/img/Favoritos.svg" alt="Favoritos"
+          ><img
+            src="/Alura-Books/img/Favoritos.svg"
+            alt="Favoritos"
+            class="container__imagem"
         /></a>
-        <a href="#"><img src="/Alura-Books/img/Compras.svg" alt="Compras" /></a>
+        <a href="#"
+          ><img
+            src="/Alura-Books/img/Compras.svg"
+            alt="Compras"
+            class="container__imagem"
+        /></a>
+        <a href="#"
+          ><img
+            src="/Alura-Books/img/Usuário.svg"
+            alt="Meu Perfil"
+            class="container__imagem"
+        /></a>
       </div>
     </header>
   </body>
